networking/gateways/base/gateways/cloudflare.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cloudflare-gateway
  namespace: cloudflare
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 20.0.0.0
  listeners:
    - protocol: HTTP
      port: 80
      name: web
      allowedRoutes:
        namespaces:
          from: All
