networking/gateways/base/gateways/default.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.1.121
  listeners:
    # https://cert-manager.io/docs/usage/gateway/#use-cases
    # For details on how to make these listeners for cert-manager
    - protocol: HTTPS
      name: home-lan-argocd
      hostname: argocd.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-okwilkins-dev-tls
            namespace: argocd
    - protocol: HTTPS
      name: home-lan-grafana
      hostname: grafana.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-okwilkins-dev-tls
            namespace: monitoring
    - protocol: HTTPS
      name: home-lan-prometheus
      hostname: prometheus.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: prometheus-okwilkins-dev-tls
            namespace: monitoring
    - protocol: HTTPS
      name: home-lan-draw
      hostname: draw.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: draw-okwilkins-dev-tls
            namespace: excalidraw
    - protocol: HTTPS
      name: home-lan-workflows
      hostname: workflows.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: workflows-okwilkins-dev-tls
            namespace: argo-workflows
    - protocol: HTTPS
      name: home-lan-harbor
      hostname: harbor.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: harbor-okwilkins-dev-tls
            namespace: harbor
    - protocol: HTTPS
      name: home-lan-search
      hostname: search.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: search-okwilkins-dev-tls
            namespace: searxng
    - protocol: HTTPS
      name: home-lan-hubble
      hostname: hubble.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: hubble-okwilkins-dev-tls
            namespace: kube-system
    - protocol: HTTPS
      name: home-lan-authelia
      hostname: auth.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: auth-okwilkins-dev-tls
            namespace: authelia
    - protocol: HTTPS
      name: home-lan-mazanoke
      hostname: convert.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: convert-okwilkins-dev-tls
            namespace: mazanoke
    - protocol: HTTPS
      name: home-lan-chhoto-url
      hostname: link.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: link-okwilkins-dev-tls
            namespace: chhoto-url
    - protocol: HTTPS
      name: home-lan-glance
      hostname: feed.okwilkins.dev
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: feed-okwilkins-dev-tls
            namespace: glance
    - protocol: TLS
      name: home-lan-pg-tf-backend
      hostname: pg-tf-backend.okwilkins.dev
      port: 5432
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
        #   mode: Terminate
        #   certificateRefs:
        #     - name: pg-tf-backend-okwilkins-dev-tls
        #       namespace: terraform
